name:               acehack
version:            5.0.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base
                  , hakyll
                  , containers
                  , filepath
                  , text
                  , pandoc
                  , blaze-html
  ghc-options:      -threaded
  default-language: Haskell2010
